# Product-Docs

./: PRD.pages  PRD.rtf  PRD.txt  README.md  file_concatenator.py  file_splitter.py  pyproject.toml  requirements.txt
ai_chunks/: combined_output_part1.txt  combined_output_part10.txt  combined_output_part11.txt  combined_output_part12.txt  combined_output_part13.txt  combined_output_part14.txt  combined_output_part15.txt  combined_output_part16.txt  combined_output_part17.txt  combined_output_part18.txt  combined_output_part19.txt  combined_output_part2.txt  combined_output_part20.txt  combined_output_part3.txt  combined_output_part4.txt  combined_output_part5.txt  combined_output_part6.txt  combined_output_part7.txt  combined_output_part8.txt  combined_output_part9.txt
swarm/: __init__.py  __main__.py  cli.py  swarm_manager.py  webapp.py
swarm/agents/: __init__.py  base.py  fallback.py  medical.py  model_client.py  orchestrator.py  python.py
swarm/interfaces/: __init__.py  common.py
swarm/memory/: __init__.py  retention.py  vector_store.py
tests/: test_agents.py  test_memory.py  test_system.py
tests/fixtures/: sample_data.txt
~/projects/ai-assistant-swarm/: README.md
