[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-assistant-swarm"
version = "0.1.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "A powerful, extensible AI assistant system using a swarm of specialized agents"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.dependencies]
aiohttp = ">=3.8.5"
asyncio = ">=3.4.3"
pydantic = ">=2.4.0"
python-dotenv = ">=1.0.0"
faiss-cpu = ">=1.7.4"
numpy = ">=1.24.0"
sentence-transformers = ">=2.2.2"
rich = ">=13.5.0"
gradio = ">=4.0.0"
python-magic = ">=0.4.27"
markdown = ">=3.4.4"
PyPDF2 = ">=3.0.0"
docx2txt = ">=0.8"
beautifulsoup4 = ">=4.12.2"
html2text = ">=2020.1.16"
structlog = ">=23.1.0"

[project.scripts]
swarm = "swarm.__main__:main" 